Reducing DataFrame size
Adjusting some of the features by reducing some of the data.

--- a/machine-learning/machine_learning_tutorial.ipynb
+++ b/machine-learning/machine_learning_tutorial.ipynb
@@ -111,6 +111,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Awesome, off to a good start, we have the data, but maybe a bit much. To reference the intro, there exists an entire machine learning category that aims to reduce the amount of input that we process. In our case, we have quite a few columns, many are redundant, a couple don't really change. We can most likely agree that having both the regular columns and adjusted columns is redundant. Adjusted columns are the most ideal ones. Regular columns here are prices on the day, but stocks have things called stock splits, where suddenly 1 share becomes something like 2 shares, thus the value of a share is halved, but the value of the company has not halved. Adjusted columns are adjusted for stock splits over time, which makes them more reliable for doing analysis.\n",
+    "\n",
+    "Thus, let's go ahead and pair down our original dataframe a bit:\n",
+    "\n",
     "Each column represents a different feature, for example 'High', 'Low' and 'Close' prices are all features. It's important to use meaningful features in a project. For example perhaps you might be looking for pattern recognition in equity prices but that doesn't necessarily mean you need all the fields, or columns above when you could choose just one or two. So it becomes necessary to look into the relationships between some of these columns. These features are also known as attributes, input, or predictor variables which can be used to ascertain a stock price prediction (called labels, predicted or output variables).\n",
     "\n",
     "Within Deep Learning and some of the other algorithms the relationships between some of these attributes are explored but not with Regression."
@@ -161,6 +165,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Now we just have the adjusted columns, and the volume column. A couple major points to make here. Many people talk about or hear about machine learning as if it is some sort of dark art that somehow generates value from nothing. Machine learning can highlight value if it is there, but it has to actually be there. You need meaningful data. So how do you know if you have meaningful data? My best suggestion is to just simply use your brain. Think about it. Are historical prices indicative of future prices? Some people think so, but this has been continually disproven over time. What about historical patterns? This has a bit more merit when taken to the extremes (which machine learning can help with), but is overall fairly weak. What about the relationship between price changes and volume over time, along with historical patterns? Probably a bit better. So, as you can already see, it is not the case that the more data the merrier, but we instead want to use useful data. At the same time, raw data sometimes should be transformed.\n",
+    "\n",
+    "Consider daily volatility, such as with the high minus low % change? How about daily percent change? Would you consider data that is simply the Open, High, Low, Close or data that is the Close, Spread/Volatility, %change daily to be better? I would expect the latter to be more ideal. The former is all very similar data points. The latter is created based on the identical data from the former, but it brings far more valuable information to the table.\n",
+    "\n",
     "It becomes useful to examine relationships between 'High' and 'Low', or 'Open' and 'Close' rather than just simply listing all the price data for each. It's useful to look at whether they have a positive or negative relationship and if so, how much they move together."
    ]
   },
