Running all cell outputs
Head and Tail data sub-set methods. Checking feature engineering output.

--- a/machine-learning/machine_learning_tutorial.ipynb
+++ b/machine-learning/machine_learning_tutorial.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -122,43 +122,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "            Adj. Open  Adj. High   Adj. Low  Adj. Close  Adj. Volume  \\\n",
-      "Date                                                                   \n",
-      "2004-08-19  50.159839  52.191109  48.128568   50.322842   44659000.0   \n",
-      "2004-08-20  50.661387  54.708881  50.405597   54.322689   22834300.0   \n",
-      "2004-08-23  55.551482  56.915693  54.693835   54.869377   18256100.0   \n",
-      "2004-08-24  55.792225  55.972783  51.945350   52.597363   15247300.0   \n",
-      "2004-08-25  52.542193  54.167209  52.100830   53.164113    9188600.0   \n",
-      "\n",
-      "              HL_PCT  PCT_change  \n",
-      "Date                              \n",
-      "2004-08-19  3.712563    0.324968  \n",
-      "2004-08-20  0.710922    7.227007  \n",
-      "2004-08-23  3.729433   -1.227880  \n",
-      "2004-08-24  6.417469   -5.726357  \n",
-      "2004-08-25  1.886792    1.183658  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = df[['Adj. Open', 'Adj. High', 'Adj. Low', 'Adj. Close', 'Adj. Volume']]\n",
-    "\n",
-    "# creating a new attribute (High-Low Percentage) by combining features\n",
-    "df['HL_PCT'] = (df['Adj. High'] - df['Adj. Close']) / df['Adj. Close'] * 100.0\n",
-    "\n",
-    "# creating a daily percentage change variable\n",
-    "df['PCT_change'] = (df['Adj. Close'] - df['Adj. Open']) / df['Adj. Open'] * 100.0\n",
-    "\n",
-    "df_new = ['Adj. Close', 'HL_PCT', 'PCT_change', 'Adj. Volume']\n",
-    "\n",
-    "print(df.head())"
+    "df = df[['Adj. Open', 'Adj. High', 'Adj. Low', 'Adj. Close', 'Adj. Volume']]"
    ]
   },
   {
@@ -169,12 +137,79 @@
     "\n",
     "Consider daily volatility, such as with the high minus low % change? How about daily percent change? Would you consider data that is simply the Open, High, Low, Close or data that is the Close, Spread/Volatility, %change daily to be better? I would expect the latter to be more ideal. The former is all very similar data points. The latter is created based on the identical data from the former, but it brings far more valuable information to the table.\n",
     "\n",
+    "Thus, not all of the data you have is useful, and sometimes you need to do further manipulation on your data to make it even more valuable before feeding it through a machine learning algorithm. Let's go ahead and transform our data next:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating a new attribute (High-Low Percentage) by combining features\n",
+    "df['HL_PCT'] = (df['Adj. High'] - df['Adj. Close']) / df['Adj. Close'] * 100.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I went ahead and recorded the video version of this, not realizing my stake that it was high minus low divided by close. I meant to do High - Low, divided by the low. Feel free to fix that if you like.\n",
+    "\n",
+    "This creates a new column that is the % spread based on the closing price, which is our crude measure of volatility. Next, we'll do daily percent change:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating a daily percentage change variable\n",
+    "df['PCT_change'] = (df['Adj. Close'] - df['Adj. Open']) / df['Adj. Open'] * 100.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we will define a new dataframe as:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Adj. Close    HL_PCT  PCT_change  Adj. Volume\n",
+      "Date                                                     \n",
+      "2004-08-19   50.322842  3.712563    0.324968   44659000.0\n",
+      "2004-08-20   54.322689  0.710922    7.227007   22834300.0\n",
+      "2004-08-23   54.869377  3.729433   -1.227880   18256100.0\n",
+      "2004-08-24   52.597363  6.417469   -5.726357   15247300.0\n",
+      "2004-08-25   53.164113  1.886792    1.183658    9188600.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = df[['Adj. Close', 'HL_PCT', 'PCT_change', 'Adj. Volume']]\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "It becomes useful to examine relationships between 'High' and 'Low', or 'Open' and 'Close' rather than just simply listing all the price data for each. It's useful to look at whether they have a positive or negative relationship and if so, how much they move together."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -198,19 +233,13 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Adj. Open</th>\n",
-       "      <th>Adj. High</th>\n",
-       "      <th>Adj. Low</th>\n",
        "      <th>Adj. Close</th>\n",
-       "      <th>Adj. Volume</th>\n",
        "      <th>HL_PCT</th>\n",
        "      <th>PCT_change</th>\n",
+       "      <th>Adj. Volume</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -220,77 +249,54 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2018-03-21</th>\n",
-       "      <td>1092.57</td>\n",
-       "      <td>1108.70</td>\n",
-       "      <td>1087.21</td>\n",
        "      <td>1094.00</td>\n",
-       "      <td>1990515.0</td>\n",
        "      <td>1.343693</td>\n",
        "      <td>0.130884</td>\n",
+       "      <td>1990515.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-03-22</th>\n",
-       "      <td>1080.01</td>\n",
-       "      <td>1083.92</td>\n",
-       "      <td>1049.64</td>\n",
        "      <td>1053.15</td>\n",
-       "      <td>3418154.0</td>\n",
        "      <td>2.921711</td>\n",
        "      <td>-2.487014</td>\n",
+       "      <td>3418154.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-03-23</th>\n",
-       "      <td>1051.37</td>\n",
-       "      <td>1066.78</td>\n",
-       "      <td>1024.87</td>\n",
        "      <td>1026.55</td>\n",
-       "      <td>2413517.0</td>\n",
        "      <td>3.918952</td>\n",
        "      <td>-2.360729</td>\n",
+       "      <td>2413517.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-03-26</th>\n",
-       "      <td>1050.60</td>\n",
-       "      <td>1059.27</td>\n",
-       "      <td>1010.58</td>\n",
        "      <td>1054.09</td>\n",
-       "      <td>3272409.0</td>\n",
        "      <td>0.491419</td>\n",
        "      <td>0.332191</td>\n",
+       "      <td>3272409.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-03-27</th>\n",
-       "      <td>1063.90</td>\n",
-       "      <td>1064.54</td>\n",
-       "      <td>997.62</td>\n",
        "      <td>1006.94</td>\n",
-       "      <td>2940957.0</td>\n",
        "      <td>5.720301</td>\n",
        "      <td>-5.353887</td>\n",
+       "      <td>2940957.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Adj. Open  Adj. High  Adj. Low  Adj. Close  Adj. Volume    HL_PCT  \\\n",
-       "Date                                                                            \n",
-       "2018-03-21    1092.57    1108.70   1087.21     1094.00    1990515.0  1.343693   \n",
-       "2018-03-22    1080.01    1083.92   1049.64     1053.15    3418154.0  2.921711   \n",
-       "2018-03-23    1051.37    1066.78   1024.87     1026.55    2413517.0  3.918952   \n",
-       "2018-03-26    1050.60    1059.27   1010.58     1054.09    3272409.0  0.491419   \n",
-       "2018-03-27    1063.90    1064.54    997.62     1006.94    2940957.0  5.720301   \n",
-       "\n",
-       "            PCT_change  \n",
-       "Date                    \n",
-       "2018-03-21    0.130884  \n",
-       "2018-03-22   -2.487014  \n",
-       "2018-03-23   -2.360729  \n",
-       "2018-03-26    0.332191  \n",
-       "2018-03-27   -5.353887  "
+       "            Adj. Close    HL_PCT  PCT_change  Adj. Volume\n",
+       "Date                                                     \n",
+       "2018-03-21     1094.00  1.343693    0.130884    1990515.0\n",
+       "2018-03-22     1053.15  2.921711   -2.487014    3418154.0\n",
+       "2018-03-23     1026.55  3.918952   -2.360729    2413517.0\n",
+       "2018-03-26     1054.09  0.491419    0.332191    3272409.0\n",
+       "2018-03-27     1006.94  5.720301   -5.353887    2940957.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
