--- a/machine-learning/machine_learning_tutorial.ipynb
+++ b/machine-learning/machine_learning_tutorial.ipynb
@@ -311,15 +311,96 @@
    "source": [
     "# 3. Regression - Features and Labels\n",
     "\n",
-    "In the previous section we were determining if the 'Adj. Close' column would act as a feature or a label (input, or output). The hope here is that we've grabbed data, decided on the valuable data, created some new valuable data through manipulation, and now we're ready to actually begin the machine learning process with regression. First, we're going to need a few more imports. All imports now:"
+    "In the previous section we were determining if the 'Adj. Close' column would act as a feature or a label (input, or output). All we know here is that at some point in the future we will be using Price as the output label, so it may in fact be the 'Adj. Close'. The hope here is that we've grabbed data, decided on the valuable data, created some new valuable data through manipulation, and now we're ready to actually begin the machine learning process with regression. First, we're going to need a few more imports. All imports now:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import quandl, math\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "# from sklearn import preprocessing, cross_validation, svm\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import cross_val_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An important note is if we decided to use 'Adj. Close' as a label, the data would be incredibly biased because both the 'HL_PCT' and 'PCT_change' variables could not even be calculated until the 'Adj. Close' was reported at the end of the day, thereby leading to data bleed. So, in this case, it's more of a feature than a label.\n",
+    "\n",
+    "We'll be using the numpy module to convert data to numpy arrays, which is what Scikit-learn wants. We will talk more on preprocessing and cross_validation when we get to them in the code, but preprocessing is the module used to do some cleaning/scaling of data prior to machine learning, and cross_ alidation is used in the testing stages. Finally, we're also importing the LinearRegression algorithm as well as svm from Scikit-learn, which we'll be using as our machine learning algorithms to demonstrate results.\n",
+    "\n",
+    "At this point, we've got data that we think is useful. How does the actual machine learning thing work? With supervised learning, you have features and labels. The features are the descriptive attributes, and the label is what you're attempting to predict or forecast. Another common example with regression might be to try to predict the dollar value of an insurance policy premium for someone. The company may collect your age, past driving infractions, public criminal record, and your credit score for example. The company will use past customers, taking this data, and feeding in the amount of the \"ideal premium\" that they think should have been given to that customer, or they will use the one they actually used if they thought it was a profitable amount.\n",
+    "\n",
+    "Thus, for training the machine learning classifier, the features are customer attributes, the label is the premium associated with those attributes.\n",
+    "\n",
+    "In our case, what are the features and what is the label? We're trying to predict the price, so is price the label? If so, what are the featuers? When it comes to forecasting out the price, our label, the thing we're hoping to predict, is actually the future price. As such, our features are actually: current price, high minus low percent, and the percent change volatility. The price that is the label shall be the price at some determined point the future. Let's go ahead and add a few new rows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forecast_col = 'Adj. Close'\n",
+    "df.fillna(value=-99999, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In ML because we can't work with na or NaN values we use the fillna() method as we actually have to replace these values with something. An alternative is to remove the whole column but this isn't ideal when working with ML algorithms. We input the value=-99999 as a sort of outlier.\n",
+    "\n",
+    "Next we will extrapolate, or forecast outwards which can be expressed as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forecast_out = int(math.ceil(0.01 * len(df)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We know that using math.ceil() will take anything and get to the ceiling. Lets assume that the len(df) was going to return a number which is decimal or fractional such as 0.2; math.ceil() will round that up to 1, or the nearest whole number. In this particular case we are predicting outward up to 10% of the length of the total dataframe. \n",
+    "\n",
+    "Here, we define the forecasting column, then we fill any NaN data with -99999. You have a few choice here regarding how to handle missing data. You can't just pass a NaN (Not a Number) datapoint to a machine learning classifier, you have to handle for it. One popular option is to replace missing data with -99,999. With many machine learning classifiers, this will just be recognized and treated as an outlier feature. You can also just drop all feature/label sets that contain missing data, but then you're maybe leaving a lot of data out.\n",
+    "\n",
+    "In the real world, many data sets are very messy. Most stock price/volume data is pretty clean, rarely with missing data, but many datasets will have a lot of missing data. I've seen datasets where the majority of the rows contain some missing bit of info. You don't necessarily want to forfeit all of that great data, plus, if your sample data has holes, you can probably bet your real-world use-case will also have holes. You need to train, test, and go live all on the same data and characteristics of that data.\n",
+    "\n",
+    "Finally, we define what we want to forecast out. In many cases, such as in the case of trying to predict a client's premium for insurance, you just want one number, for the \"right now\", but, with forecasting, you want to forecast out a certain number of datapoints. We're saying we want to forecast out 1% of the entire length of the dataset. Thus, if our data is 100 days of stock prices, we want to be able to predict the price 1 day out into the future. Choose whatever you like. If you are just trying to predict tomorrow's price, then you would just do 1 day out, and the forecast would be just one day out. If you predict 10 days out, we can actually generate a forcast for every day, for the next week and a half.\n",
+    "\n",
+    "In our case, we've decided the features are a bunch of the current values, and the label shall be the price, in the future, where the future is 1% of the entire length of the dataset out. We'll assume all current columns are our features, so we'll add a new column with a simple pandas operation. Next we want to create the label column as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['label'] = df[forecast_col].shift(-forecast_out)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we have the data that comprises our features and labels. Next, we need to do some preprocessing and final steps before actually running everything, which is what we will be focusing on in the next tutorial."
+   ]
   }
  ],
  "metadata": {
