--- a/machine-learning/machine_learning_tutorial.ipynb
+++ b/machine-learning/machine_learning_tutorial.ipynb
@@ -316,16 +316,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'cross_validation' from 'sklearn' (C:\\Users\\lynst\\anaconda3\\lib\\site-packages\\sklearn\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-36-9f6c48e674de>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpreprocessing\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcross_validation\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msvm\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinear_model\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mLinearRegression\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m# from sklearn.model_selection import cross_val_score\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'cross_validation' from 'sklearn' (C:\\Users\\lynst\\anaconda3\\lib\\site-packages\\sklearn\\__init__.py)"
+     ]
+    }
+   ],
    "source": [
     "import quandl, math\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "# from sklearn import preprocessing, cross_validation, svm\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import cross_val_score"
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection im"
    ]
   },
   {
@@ -364,11 +377,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "forecast_out = int(math.ceil(0.01 * len(df)))"
+    "forecast_out = int(math.ceil(0.10 * len(df)))"
    ]
   },
   {
@@ -388,11 +401,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['label'] = df[forecast_col].shift(-forecast_out)"
+    "df['label'] = df[forecast_col].shift(-forecast_out)\n",
+    "df.dropna(inplace=True)"
    ]
   },
   {
@@ -401,6 +415,113 @@
    "source": [
     "Now we have the data that comprises our features and labels. Next, we need to do some preprocessing and final steps before actually running everything, which is what we will be focusing on in the next tutorial."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Adj. Close    HL_PCT  PCT_change  Adj. Volume       label\n",
+      "Date                                                                 \n",
+      "2004-08-19   50.322842  3.712563    0.324968   44659000.0  190.427832\n",
+      "2004-08-20   54.322689  0.710922    7.227007   22834300.0  193.572540\n",
+      "2004-08-23   54.869377  3.729433   -1.227880   18256100.0  195.819476\n",
+      "2004-08-24   52.597363  6.417469   -5.726357   15247300.0  198.126598\n",
+      "2004-08-25   53.164113  1.886792    1.183658    9188600.0  195.553655\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Adj. Close    HL_PCT  PCT_change  Adj. Volume   label\n",
+      "Date                                                             \n",
+      "2015-07-09      544.65  0.776646   -0.729062    1488324.0  815.95\n",
+      "2015-07-10      556.11  0.571829    0.433440    2171750.0  814.96\n",
+      "2015-07-13      571.73  0.195897    2.184054    2089641.0  802.65\n",
+      "2015-07-14      584.18  0.946404    1.684943    3741583.0  810.73\n",
+      "2015-07-15      583.96  0.809987    0.037688    2073330.0  810.06\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.tail())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Try adjusting the outward forecast percentage of the overall dataset to 1%."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Adj. Close    HL_PCT  PCT_change  Adj. Volume       label\n",
+      "Date                                                                 \n",
+      "2004-08-19   50.322842  3.712563    0.324968   44659000.0  190.427832\n",
+      "2004-08-20   54.322689  0.710922    7.227007   22834300.0  193.572540\n",
+      "2004-08-23   54.869377  3.729433   -1.227880   18256100.0  195.819476\n",
+      "2004-08-24   52.597363  6.417469   -5.726357   15247300.0  198.126598\n",
+      "2004-08-25   53.164113  1.886792    1.183658    9188600.0  195.553655\n"
+     ]
+    }
+   ],
+   "source": [
+    "forecast_out = int(math.ceil(0.01 * len(df)))\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Adj. Close    HL_PCT  PCT_change  Adj. Volume   label\n",
+      "Date                                                             \n",
+      "2015-07-09      544.65  0.776646   -0.729062    1488324.0  815.95\n",
+      "2015-07-10      556.11  0.571829    0.433440    2171750.0  814.96\n",
+      "2015-07-13      571.73  0.195897    2.184054    2089641.0  802.65\n",
+      "2015-07-14      584.18  0.946404    1.684943    3741583.0  810.73\n",
+      "2015-07-15      583.96  0.809987    0.037688    2073330.0  810.06\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.tail())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
