--- a/machine-learning/machine_learning_tutorial.ipynb
+++ b/machine-learning/machine_learning_tutorial.ipynb
@@ -65,20 +65,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            ShortVolume  ShortExemptVolume  TotalVolume\n",
-      "Date                                                   \n",
-      "2014-04-03     735886.0              831.0    1497327.0\n",
-      "2014-04-04     616647.0              100.0    1838397.0\n",
-      "2014-04-07     440648.0              633.0    1191767.0\n",
-      "2014-04-08     494117.0                5.0    1019518.0\n",
-      "2014-04-09     319938.0             1701.0     812823.0\n"
+      "              Open    High     Low    Close      Volume  Ex-Dividend  \\\n",
+      "Date                                                                   \n",
+      "2004-08-19  100.01  104.06   95.96  100.335  44659000.0          0.0   \n",
+      "2004-08-20  101.01  109.08  100.50  108.310  22834300.0          0.0   \n",
+      "2004-08-23  110.76  113.48  109.05  109.400  18256100.0          0.0   \n",
+      "2004-08-24  111.24  111.60  103.57  104.870  15247300.0          0.0   \n",
+      "2004-08-25  104.76  108.00  103.88  106.000   9188600.0          0.0   \n",
+      "\n",
+      "            Split Ratio  Adj. Open  Adj. High   Adj. Low  Adj. Close  \\\n",
+      "Date                                                                   \n",
+      "2004-08-19          1.0  50.159839  52.191109  48.128568   50.322842   \n",
+      "2004-08-20          1.0  50.661387  54.708881  50.405597   54.322689   \n",
+      "2004-08-23          1.0  55.551482  56.915693  54.693835   54.869377   \n",
+      "2004-08-24          1.0  55.792225  55.972783  51.945350   52.597363   \n",
+      "2004-08-25          1.0  52.542193  54.167209  52.100830   53.164113   \n",
+      "\n",
+      "            Adj. Volume  \n",
+      "Date                     \n",
+      "2004-08-19   44659000.0  \n",
+      "2004-08-20   22834300.0  \n",
+      "2004-08-23   18256100.0  \n",
+      "2004-08-24   15247300.0  \n",
+      "2004-08-25    9188600.0  \n"
      ]
     }
    ],
@@ -86,7 +102,7 @@
     "import pandas as pd\n",
     "import quandl\n",
     "\n",
-    "df = quandl.get(\"FINRA/FNSQ_GOOGL\", authtoken=\"phXWUzDZRxk2sk_QDrsS\")\n",
+    "df = quandl.get(\"WIKI/GOOGL\")\n",
     "\n",
     "print(df.head())"
    ]
@@ -106,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
