--- a/machine-learning/machine_learning_tutorial.ipynb
+++ b/machine-learning/machine_learning_tutorial.ipynb
@@ -178,9 +178,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Adj. Close    HL_PCT  PCT_change  Adj. Volume\n",
+      "Date                                                     \n",
+      "2004-08-19   50.322842  3.712563    0.324968   44659000.0\n",
+      "2004-08-20   54.322689  0.710922    7.227007   22834300.0\n",
+      "2004-08-23   54.869377  3.729433   -1.227880   18256100.0\n",
+      "2004-08-24   52.597363  6.417469   -5.726357   15247300.0\n",
+      "2004-08-25   53.164113  1.886792    1.183658    9188600.0\n"
+     ]
+    }
+   ],
    "source": [
     "df = df[['Adj. Close', 'HL_PCT', 'PCT_change', 'Adj. Volume']]\n",
     "print(df.head())"
@@ -195,9 +209,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Adj. Close</th>\n",
+       "      <th>HL_PCT</th>\n",
+       "      <th>PCT_change</th>\n",
+       "      <th>Adj. Volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2018-03-21</th>\n",
+       "      <td>1094.00</td>\n",
+       "      <td>1.343693</td>\n",
+       "      <td>0.130884</td>\n",
+       "      <td>1990515.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-03-22</th>\n",
+       "      <td>1053.15</td>\n",
+       "      <td>2.921711</td>\n",
+       "      <td>-2.487014</td>\n",
+       "      <td>3418154.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-03-23</th>\n",
+       "      <td>1026.55</td>\n",
+       "      <td>3.918952</td>\n",
+       "      <td>-2.360729</td>\n",
+       "      <td>2413517.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-03-26</th>\n",
+       "      <td>1054.09</td>\n",
+       "      <td>0.491419</td>\n",
+       "      <td>0.332191</td>\n",
+       "      <td>3272409.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-03-27</th>\n",
+       "      <td>1006.94</td>\n",
+       "      <td>5.720301</td>\n",
+       "      <td>-5.353887</td>\n",
+       "      <td>2940957.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Adj. Close    HL_PCT  PCT_change  Adj. Volume\n",
+       "Date                                                     \n",
+       "2018-03-21     1094.00  1.343693    0.130884    1990515.0\n",
+       "2018-03-22     1053.15  2.921711   -2.487014    3418154.0\n",
+       "2018-03-23     1026.55  3.918952   -2.360729    2413517.0\n",
+       "2018-03-26     1054.09  0.491419    0.332191    3272409.0\n",
+       "2018-03-27     1006.94  5.720301   -5.353887    2940957.0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.tail()"
    ]
@@ -213,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,18 +405,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Adj. Close    HL_PCT  PCT_change  Adj. Volume       label\n",
+      "Date                                                                 \n",
+      "2004-08-19   50.322842  3.712563    0.324968   44659000.0  214.005615\n",
+      "2004-08-20   54.322689  0.710922    7.227007   22834300.0  210.725489\n",
+      "2004-08-23   54.869377  3.729433   -1.227880   18256100.0  208.072299\n",
+      "2004-08-24   52.597363  6.417469   -5.726357   15247300.0  218.288837\n",
+      "2004-08-25   53.164113  1.886792    1.183658    9188600.0  223.309335\n"
+     ]
+    }
+   ],
    "source": [
     "print(df.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Adj. Close    HL_PCT  PCT_change  Adj. Volume    label\n",
+      "Date                                                              \n",
+      "2016-11-04      781.10  0.944821    1.270582    1970603.0  1094.00\n",
+      "2016-11-07      802.03  0.370310    0.890622    1992570.0  1053.15\n",
+      "2016-11-08      811.98  0.500012    1.240602    1769069.0  1026.55\n",
+      "2016-11-09      805.59  0.759692    0.468927    3098510.0  1054.09\n",
+      "2016-11-10      780.29  3.815248   -3.667901    5909609.0  1006.94\n"
+     ]
+    }
+   ],
    "source": [
     "print(df.tail())"
    ]
@@ -327,9 +458,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Adj. Close    HL_PCT  PCT_change  Adj. Volume       label\n",
+      "Date                                                                 \n",
+      "2004-08-19   50.322842  3.712563    0.324968   44659000.0  214.005615\n",
+      "2004-08-20   54.322689  0.710922    7.227007   22834300.0  210.725489\n",
+      "2004-08-23   54.869377  3.729433   -1.227880   18256100.0  208.072299\n",
+      "2004-08-24   52.597363  6.417469   -5.726357   15247300.0  218.288837\n",
+      "2004-08-25   53.164113  1.886792    1.183658    9188600.0  223.309335\n"
+     ]
+    }
+   ],
    "source": [
     "forecast_out = int(math.ceil(0.01 * len(df)))\n",
     "print(df.head())"
@@ -337,9 +482,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Adj. Close    HL_PCT  PCT_change  Adj. Volume    label\n",
+      "Date                                                              \n",
+      "2016-11-04      781.10  0.944821    1.270582    1970603.0  1094.00\n",
+      "2016-11-07      802.03  0.370310    0.890622    1992570.0  1053.15\n",
+      "2016-11-08      811.98  0.500012    1.240602    1769069.0  1026.55\n",
+      "2016-11-09      805.59  0.759692    0.468927    3098510.0  1054.09\n",
+      "2016-11-10      780.29  3.815248   -3.667901    5909609.0  1006.94\n"
+     ]
+    }
+   ],
    "source": [
     "print(df.tail())"
    ]
